================================================================================
Changes since v11.10
================================================================================

--------------------------------------------------------------------------------
basic

   ## config.h -- a new file that will eventually contain most or all framework
                  configuration parameters

   NavDR class
      1) removed function getRpyVector()
      2) deadReckoning() function is now using  Basic::Nav::computeEulerAngles()
         instead of getRpyVector()

   Timer class
      1) changed how the static list of timers is maintained
      2) changed 'LCreal' variables to 'double'
      3) general clean up

--------------------------------------------------------------------------------
basicGL

   MapPage class
      1) (bug fix) fixed getCurrentRadius() to return the correct centered or
         decentered radius value

   Readout class
      1) added makeText method to lat/lon readouts to change "@" to degree symbol


--------------------------------------------------------------------------------
simulation

   Autopilot class
      1) update to loiter pattern calculation

   Nib class
      1) removed function drComputeEulerAngles()
      2) mainDeadReckoning() function is now using Basic::Nav::computeEulerAngles()
         instead of drComputeEulerAngles()



